# radiobrowser-api-rust

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  build_with_docker.sh  builddist.sh  docker-compose-traefik.yml  docker-compose.yml  init.sql  install.sh  install_from_dist.sh  install_from_source.sh  radiobrowser-dev.toml  radiobrowser.toml  start.sh  traefik-dyn-config.toml  uninstall.sh
ansible/: inventory  playbook.yml
ansible/roles/radiobrowser/tasks/: main.yml
ansible/roles/radiobrowser/templates/: radio-browser.conf.j2
debian/: postinst  postrm
deployment/: HEADER.html  backup.sh  grafana-dashboard.json
docs/: CHANGELOG.md  config.rb  docker_run.sh
docs/lib/: unique_head.rb
docs/source/: index.html.md.erb
docs/source/includes/lists/list/: all_stations.md.erb  check_results.md.erb  codecs.md.erb  countries.md.erb  country_codes.md.erb  languages.md.erb  states.md.erb  station_check_step.md.erb  station_clicks.md.erb  stations.md.erb  tags.md.erb
docs/source/includes/lists/search/: advanced.md.erb  url.md.erb  uuid.md.erb
docs/source/includes/lists/server/: config.md.erb  mirrors.md.erb  prometheus.md.erb  stats.md.erb
docs/source/includes/modify/: add_station.md.erb  index.md.erb  station_click_counter.md.erb  vote_for_station.md.erb
docs/source/includes/stations/: broken.md.erb  by_clicks.md.erb  by_recent_clicks.md.erb  by_recently_changed.md.erb  by_votes.md.erb  index.md.erb  old.md.erb
docs/source/includes/structs/: station.md.erb  station_check.md.erb  station_check_step.md.erb
etc/: config-example.toml  language-replace.csv  language-to-code.csv  logrotate  tag-replace.csv
init/: radiobrowser.service
src/: api.rs  cli.rs  config.rs  db.rs  logger.rs  main.rs  pull_servers.rs  simple_migrate.rs
src/api/: all_params.rs  api_error.rs  api_response.rs  db.rs  mod.rs  parameters.rs  prometheus_exporter.rs  pull_servers.rs  simple_migrate.rs
src/api/cache/: builtin.rs  generic_cache.rs  memcached.rs  mod.rs  none.rs  redis.rs
src/api/data/: api_config.rs  api_country.rs  api_language.rs  api_streaming_server.rs  config.rs  extra_info.rs  mod.rs  result1n.rs  result_message.rs  server_stats.rs  state.rs  station.rs  station_add_result.rs  station_check.rs  station_check_step.rs  station_click.rs  station_history.rs  status.rs
src/check/: check.rs  db.rs  diff_calc.rs  favicon.rs  mod.rs  models.rs
src/checkserver/: mod.rs
src/cleanup/: mod.rs
src/config/: config.rs  config_error.rs  data_mapping_item.rs  mod.rs
src/db/: db.rs  db_error.rs  db_mysql.rs  mod.rs  models.rs
src/db/db_mysql/: conversions.rs  migrations.rs  mod.rs  simple_migrate.rs
src/db/models/: db_country.rs  extra_info.rs  mod.rs  state.rs  station_change_item_new.rs  station_check_item.rs  station_check_item_new.rs  station_check_step_item.rs  station_check_step_item_new.rs  station_click_item.rs  station_click_item_new.rs  station_history_item.rs  station_item.rs  streaming_server.rs  streaming_server_new.rs
src/pull/: api_error.rs  mod.rs  pull_error.rs  uuid_with_time.rs
src/refresh/: mod.rs
static/: docs.hbs  docs.html  main.css
templates/: template.html
