[package]
authors = ["segler_alex"]
description = "Radio-Browser Server with REST API"
license = "agpl-3.0"
name = "radiobrowser-api-rust"
readme = "README.md"
version = "0.7.23"
edition = "2021"

[dependencies]
av-stream-info-rust = "0.10.2"
celes = "2.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.14", features = ["cargo", "env"] }
csv = "1.1.6"
dns-lookup = "1.0.8"
fern = { version = "0.6.1", features = ["colored"] }
handlebars = "4.2.2"
hostname = "0.3.1"
humantime = "2.1.0"
icecast-stats = { version = "0.1.1" }
log = "0.4.16"
memcache = "0.16.0"
mysql = "21.0.2"
native-tls = "0.2.10"
once_cell = "1.10.0"
percent-encoding = "2.1.0"
prometheus = { version = "0.13.0" }
rayon = "1.5.2"
redis = { version = "0.21.5" }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
rouille = "3.5.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
serde_with = "1.13.0"
signal-hook = "0.3.13"
threadpool = "1.8.1"
toml = "0.5.9"
url = "2.2.2"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
website-icon-extract = "0.5.0"
xml_writer = "0.4.0"

[package.metadata.deb]
maintainer = "sailor <segler@programmierecke.net>"
copyright = "2018, sailor <segler@programmierecke.net>"
depends = "$auto, systemd"
extended-description = """\
Radio-Browser Server with REST API

In short it is an API for an index of web streams (audio and video). Streams can be added and searched by any user of the API.

There is an official deployment of this software that is also freely usable at https://api.radio-browser.info

## Features
* Open source
* Freely licensed
* Well documented API
* Automatic regular online checking of streams
* Highliy configurable
* Easy setup for multiple configurations (native, deb-packages, docker, ansible)
* Implemented in Rust-lang
* Multiple request types: query, json, x-www-form-urlencoded, form-data
* Multiple output types: xml, json, m3u, pls, xspf, ttl, csv
* Optional: multi-server setup with automatic mirroring
* Optional: response caching in internal or external cache (redis, memcached)
"""
section = "admin"
priority = "optional"
assets = [
    ["target/release/radiobrowser-api-rust", "usr/bin/radiobrowser", "755"],
    ["static/*", "usr/share/radiobrowser/", "644"],
    ["init.sql", "usr/share/radiobrowser/init.sql", "644"],
    ["etc/config-example.toml", "etc/radiobrowser/config-example.toml", "644"],
    ["etc/config-example.toml", "etc/radiobrowser/config.toml", "644"],
    ["etc/language-replace.csv", "etc/radiobrowser/language-replace.csv", "644"],
    ["etc/language-to-code.csv", "etc/radiobrowser/language-to-code.csv", "644"],
    ["etc/tag-replace.csv", "etc/radiobrowser/tag-replace.csv", "644"],
    ["etc/logrotate", "etc/logrotate.d/radiobrowser", "644"],
    ["etc/logrotate", "etc/logrotate.d/radiobrowser", "644"],
]
conf-files = [
    "etc/radiobrowser/config.toml",
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "radiobrowser", enable = false }