[package]
authors = ["segler_alex"]
description = "Radio-Browser Server with REST API"
license = "agpl-3.0"
name = "radiobrowser-api-rust"
readme = "README.md"
version = "0.7.24"
edition = "2021"

[dependencies]
av-stream-info-rust = "0.10.3"
celes = "2.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "3.2.25", features = ["cargo", "env"] }
csv = "1.2.2"
dns-lookup = "2.0.3"
fern = { version = "0.6.2", features = ["colored"] }
handlebars = "4.4.0"
hostname = "0.3.1"
humantime = "2.1.0"
icecast-stats = { version = "0.1.1" }
log = "0.4.20"
memcache = "0.17.0"
mysql = "24.0.0"
mysql_common = { features = ["chrono"] }
native-tls = "0.2.11"
once_cell = "1.18.0"
percent-encoding = "2.3.0"
prometheus = { version = "0.13.3" }
rayon = "1.8.0"
redis = { version = "0.23.3" }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rouille = "3.6.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
signal-hook = "0.3.17"
threadpool = "1.8.1"
toml = "0.8.0"
url = "2.4.1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
website-icon-extract = "0.5.2"
xml_writer = "0.4.0"

[package.metadata.deb]
maintainer = "sailor <segler@programmierecke.net>"
copyright = "2018, sailor <segler@programmierecke.net>"
depends = "$auto, systemd"
extended-description = """\
Radio-Browser Server with REST API

In short it is an API for an index of web streams (audio and video). Streams can be added and searched by any user of the API.

There is an official deployment of this software that is also freely usable at https://api.radio-browser.info

## Features
* Open source
* Freely licensed
* Well documented API
* Automatic regular online checking of streams
* Highliy configurable
* Easy setup for multiple configurations (native, deb-packages, docker, ansible)
* Implemented in Rust-lang
* Multiple request types: query, json, x-www-form-urlencoded, form-data
* Multiple output types: xml, json, m3u, pls, xspf, ttl, csv
* Optional: multi-server setup with automatic mirroring
* Optional: response caching in internal or external cache (redis, memcached)
"""
section = "admin"
priority = "optional"
assets = [
    ["target/release/radiobrowser-api-rust", "usr/bin/radiobrowser", "755"],
    ["static/*", "usr/share/radiobrowser/", "644"],
    ["init.sql", "usr/share/radiobrowser/init.sql", "644"],
    ["etc/config-example.toml", "etc/radiobrowser/config-example.toml", "644"],
    ["etc/config-example.toml", "etc/radiobrowser/config.toml", "644"],
    ["etc/language-replace.csv", "etc/radiobrowser/language-replace.csv", "644"],
    ["etc/language-to-code.csv", "etc/radiobrowser/language-to-code.csv", "644"],
    ["etc/tag-replace.csv", "etc/radiobrowser/tag-replace.csv", "644"],
    ["etc/logrotate", "etc/logrotate.d/radiobrowser", "644"],
    ["etc/logrotate", "etc/logrotate.d/radiobrowser", "644"],
]
conf-files = [
    "etc/radiobrowser/config.toml",
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "radiobrowser", enable = false }